# activities/urls.py
@@ -1,6 +1,0 @@
-from django.urls import path
-from .views import UserActivityListView
-
-urlpatterns = [
-    path("my", UserActivityListView.as_view(), name="my_activities"),
-]
