# users/models.py
@@ -1,27 +1,20 @@
-from django.contrib.auth.models import AbstractUser
 from django.db import models
+from django.contrib.auth.models import AbstractUser
+
+from core.models import CommonModel
 
 
 class User(AbstractUser):
-    is_public = models.BooleanField(default=True)
-    followings = models.ManyToManyField(
-        "self",
-        symmetrical=False,
-        related_name="followers",
-        blank=True,
-        db_index=True,
+    ROLE_CHOICES = (
+        ("owner", "사장"),
+        ("admin", "관리자"),
+        ("employee", "일반직원"),
     )
-
-    class Meta:
-        indexes = [
-            models.Index(fields=["username"], name="username_idx"),
-        ]
+    role = models.CharField(max_length=10, choices=ROLE_CHOICES, default="employee")
 
 
-class UserInterest(models.Model):
-    user = models.ForeignKey(User, on_delete=models.CASCADE, related_name="interests")
-    tag = models.ForeignKey("posts.Tag", on_delete=models.CASCADE)
-    score = models.IntegerField(default=0)
-
-    class Meta:
-        unique_together = ("user", "tag")
+class Company(CommonModel):
+    name = models.CharField(max_length=100)
+    owner = models.ForeignKey(
+        User, on_delete=models.CASCADE, related_name="owned_companies"
+    )
